--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-    margin-top: 1.3em;
+    margin-top: .3em;
 }
 
 
@@ -88,13 +88,15 @@ header {
 	cursor: pointer;
     color: #222;
     font-weight: 300;
+  margin-bottom: 20px;
+
 }
 
 /* Basic Card Styling */
 .card {
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
   padding: 20px;
 }
